Fixing scrollbar issue

--- a/style.css
+++ b/style.css
@@ -36,7 +36,6 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
-  overflow-y: scroll;
 }
 
 .slide-info {
